# career-agent

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  Dockerfile  langgraph.json  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/graph/: __init__.py  builder.py  entrypoint.py  pubsub.py  runner.py
backend/app/graph/nodes/: __init__.py  critic.py  hitl.py  matcher.py  memory_loader.py  memory_writer.py  router.py  scout.py  scraper.py  writer.py
backend/app/memory/: __init__.py  preference_extractor.py  store.py
backend/app/models/: schemas.py  state.py
backend/app/routers/: hitl.py  memory.py  pipeline.py  profile.py
backend/app/tools/: __init__.py  cv_parser.py  embedding_tools.py  retry.py  summarizer.py  supabase_ops.py  tavily_tools.py
backend/supabase/migrations/: 001_initial_schema.sql  002_mvp_best_of_n_and_memory.sql
backend/tests/: conftest.py  test_api_routes.py  test_config.py  test_cv_parser.py  test_embedding_tools.py  test_graph_builder.py  test_nodes.py  test_tavily_tools.py
backend/tests/evaluations/: datasets.py  eval_career_agent.py  evaluators.py
docs/: Project.md
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: critic-scores.tsx  gap-report.tsx  letter-editor.tsx  live-agent-log.tsx  logo.tsx  offer-card.tsx  pipeline-progress.tsx  sidebar.tsx
frontend/lib/: api.ts  types.ts
(+12 files in other folders)
